log/build_2024-11-30_16-17-14/follow/stderr.log
  File "/home/robot/human_ws/install/follow/lib/python3.10/site-packages/follow/follow_tag_static2.py", line 102
    if self.translation is not None and self.count=5:
                                                  ^
SyntaxError: invalid syntax

